--- a/community/index.html
+++ b/community/index.html
@@ -27,33 +27,33 @@
 <meta property="dc:date" content="" />
 <meta property="dc:format" content="text/html" />
 <meta property="dc:language" content="en" />
-<meta property="dc:identifier" content="https://www.qixiaodong.tk/community/" />
+<meta property="dc:identifier" content="https://purl.org/qxd/community/" />
 <meta property="dc:rights" content="CC-BY" />
-<meta property="dc:source" content="The NoteBlog of Xiaodong Qi" />
+<meta property="dc:source" content="A Notebook of Xiaodong Qi's" />
 <meta property="dc:subject" content="Physics" />
 <meta property="dc:type" content="website" />
 <meta name="dc.language" content="en, zh-Hans, cmn">
 <!-- RDFa Metadata (in OpenGraph) -->
 <meta property="og:title" content="Community" />
-<meta property="og:author" content="https://www.qixiaodong.tk/index.html" />  <!-- Should be Liquid? URI? -->
+<meta property="og:author" content="https://purl.org/qxd/index.html" />  <!-- Should be Liquid? URI? -->
 <meta property="https://ogp.me/ns/profile#first_name" content="Xiaodong"/>
 <meta property="https://ogp.me/ns/profile#last_name" content="Qi"/>
 <meta property="https://ogp.me/ns/article#published_time" content="" />
-<meta property="og:site_name" content="The NoteBlog of Xiaodong Qi" /> <!-- Same as dc:source? -->
-<meta property="og:url" content="https://www.qixiaodong.tk/community/" />
+<meta property="og:site_name" content="A Notebook of Xiaodong Qi's" /> <!-- Same as dc:source? -->
+<meta property="og:url" content="https://purl.org/qxd/community/" />
 <meta property="og:type" content="website" />
 <!-- Google Scholar Metadata -->
 <meta name="citation_author" content="Xiaodong Qi"/>
 <meta name="citation_date" content=""/>
 <meta name="citation_title" content="Community"/>
-<meta name="citation_journal_title" content="The NoteBlog of Xiaodong Qi"/>
+<meta name="citation_journal_title" content="A Notebook of Xiaodong Qi's"/>
 <!--NOTE: see also the COinS Metadata in span element in coins.html and footer. -->
 <!-- Twitter card summary -->
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@i2000s" />
 <meta name="twitter:title" content="Community" />
 <meta name="twitter:description" content="Xiaodong's self-described contribution to the community." />
-<meta name="twitter:image" content="https://www.qixiaodong.tk/assets/img/qi2016.jpg" />
+<meta name="twitter:image" content="https://purl.org/qxd/assets/img/qi2016.jpg" />
 <!-- Baidu website verification code -->
 <meta name="baidu-site-verification" content="cAv3dLIDps" />
 
@@ -388,7 +388,7 @@
       <img src="https://www.qixiaodong.tk/assets/img/icon-github.png" alt="github"> Coding </a></h4>
        <div class="excerpt" height="300px">
            <div class="scroll">
-                <ul><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Fix a broken link.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/6f762a70e5...f03cb9a4c0">06:17 2016/11/23</a></li><li>i2000s pushed to master at i2000s/i2000s.github.io: <em>Updating to 6f762a70e5c129115956988f1e09d80bea33f7e6.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/c2b638262a...3c04460f4d">05:59 2016/11/23</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Redirect posts to branch sites.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/0d5b610f36...6f762a70e5">05:54 2016/11/23</a></li><li>i2000s pushed to gh-pages at i2000s/en: <em>Updating to 9714d476aa2dd3e31fc0a12c2cddcaed4b894db2.</em> <a href="https://github.com/i2000s/en/compare/8d77590df2...3b3ddebf4d">04:56 2016/11/23</a></li><li>i2000s pushed to dev at i2000s/en: <em>Remove redirect links.</em> <a href="https://github.com/i2000s/en/compare/385ca4b7a9...9714d476aa">04:51 2016/11/23</a></li></ul>
+                <ul><li>i2000s pushed to gh-pages at i2000s/en: <em>Updating to badce7a122cfc5817dca98bbce1dc394f9fea08e.</em> <a href="https://github.com/i2000s/en/compare/05f3ad7a98...4e24650502">07:17 2016/11/26</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Update title of the site.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/ce0d3dd9c5...8b6b79d0ee">07:16 2016/11/26</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Update metadata and formations.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/f03cb9a4c0...ce0d3dd9c5">07:14 2016/11/26</a></li><li>i2000s pushed to dev at i2000s/en: <em>Resize the star count button.</em> <a href="https://github.com/i2000s/en/compare/de4d8c42d5...badce7a122">07:12 2016/11/26</a></li><li>i2000s pushed to gh-pages at i2000s/en: <em>Updating to de4d8c42d560e11ba4b78a920c4878e100ec4df3.</em> <a href="https://github.com/i2000s/en/compare/dcb34913ae...05f3ad7a98">06:45 2016/11/26</a></li></ul>
            </div>
        </div>
     </div>
@@ -419,15 +419,16 @@
             <div class="col-md-7 col-xs-9">
               <div class="row">
                <a href="mailto:i2000s@hotmail.com" onClick="recordOutboundLink(this, 'Outbound Links', 'email'); return false;"><img src="https://www.qixiaodong.tk/assets/img/icon-email.png" height="48px" alt="email"> </a>
-               <a href="https://github.com/i2000s" onClick="recordOutboundLink(this, 'Outbound Links', 'Github'); return false;"><img src="https://www.qixiaodong.tk/assets/img/icon-github.png" height="40px" alt="github"> </a>
-               <a href="https://plus.google.com/+XiaodongQi"><img src="https://www.qixiaodong.tk/assets/img/icon-gplus.png" height="40px" alt="G+"></a>
-               <a href="https://www.facebook.com/i2000s"><img src="https://www.qixiaodong.tk/assets/img/icon-facebook.png" height="42px" alt="facebook"></a>
-               <a href="https://scholar.google.com/citations?user=6FdqHlIAAAAJ&hl=en"><img src="https://www.qixiaodong.tk/assets/img/icon-scholar.png" height="40px" alt="GoogleScholar"></a>
-               <a href="https://twitter.com/i2000s"><img src="https://www.qixiaodong.tk/assets/img/icon-twitter.png" height="45px" alt="Twitter"></a>
-               <a href="https://www.linkedin.com/in/xiaodongqi"><img src="https://www.qixiaodong.tk/assets/img/icon-linkedin.png" height="40px" alt="LinkedIn"></a>
-               <a href="/atom.xml" onClick="recordOutboundLink(this, 'Outbound Links', 'RSS'); return false;"><img src="https://www.qixiaodong.tk/assets/img/icon-rss.png" height="40px" alt="feed"></a>
-               <a href="https://physics.stackexchange.com/users/37682/xiaodong-qi"><img src="https://www.qixiaodong.tk/assets/img/icon-stackoverflow.png" height="40px" alt="Physics Stackexchange"></a>
-               <iframe class="github-btn" src="//ghbtns.com/github-btn.html?user=i2000s&repo=i2000s.github.io&type=star&count=true&size=large" allowtransparency="true" frameborder="0" scrolling="0" width="150px" height="40px" style="vertical-align:middle; margin-top:9px;"></iframe>
+<a href="https://github.com/i2000s" onClick="recordOutboundLink(this, 'Outbound Links', 'Github'); return false;"><img src="https://www.qixiaodong.tk/assets/img/icon-github.png" height="40px" alt="github"> </a>
+<a href="https://plus.google.com/+XiaodongQi"><img src="https://www.qixiaodong.tk/assets/img/icon-gplus.png" height="40px" alt="G+"></a>
+<a href="https://www.facebook.com/i2000s"><img src="https://www.qixiaodong.tk/assets/img/icon-facebook.png" height="42px" alt="facebook"></a>
+<a href="https://scholar.google.com/citations?user=6FdqHlIAAAAJ&hl=en"><img src="https://www.qixiaodong.tk/assets/img/icon-scholar.png" height="40px" alt="GoogleScholar"></a>
+<a href="https://twitter.com/i2000s"><img src="https://www.qixiaodong.tk/assets/img/icon-twitter.png" height="45px" alt="Twitter"></a>
+<a href="https://www.linkedin.com/in/xiaodongqi"><img src="https://www.qixiaodong.tk/assets/img/icon-linkedin.png" height="40px" alt="LinkedIn"></a>
+<a href="/atom.xml" onClick="recordOutboundLink(this, 'Outbound Links', 'RSS'); return false;"><img src="https://www.qixiaodong.tk/assets/img/icon-rss.png" height="40px" alt="feed"></a>
+<a href="https://physics.stackexchange.com/users/37682/xiaodong-qi"><img src="https://www.qixiaodong.tk/assets/img/icon-stackoverflow.png" height="40px" alt="Physics Stackexchange"></a>
+<iframe class="github-btn" src="//ghbtns.com/github-btn.html?user=i2000s&repo=i2000s.github.io&type=star&count=true&size=large" allowtransparency="true" frameborder="0" scrolling="0" width="150px" height="40px" style="vertical-align:middle; margin-top:9px;"></iframe>
+
               </div>
               <div class="row">
                 <span> &nbsp; </span> <span><a href="https://www.qixiaodong.tk/CV-XiaodongQi.pdf"
@@ -465,7 +466,7 @@
       &amp;rft.date=
       &amp;rft.language='en-US, zh-Hans'
       &amp;rft.rights='CC-BY'
-      &amp;rft_id=https://www.qixiaodong.tk/community/">
+      &amp;rft_id=https://purl.org/qxd/community/">
   </span>
 
     </footer>
