--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
   <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="utf-8">
+  <head prefix="dc: http://purl.org/dc/terms/ og: http://ogp.me/ns#"> <!-- namespaces used in metadata.html -->
     <title>Xiaodong Qi's NoteBlog</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv = "X-UA-Compatible" content = "IE = edge">
+    <meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
       <!--[if lt IE 9]>
       <script src = "https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src = "https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -33,33 +32,33 @@
 <meta property="dc:date" content="" />
 <meta property="dc:format" content="text/html" />
 <meta property="dc:language" content="en" />
-<meta property="dc:identifier" content="https://www.qixiaodong.tk/" />
+<meta property="dc:identifier" content="https://purl.org/qxd/" />
 <meta property="dc:rights" content="CC-BY" />
-<meta property="dc:source" content="The NoteBlog of Xiaodong Qi" />
+<meta property="dc:source" content="A Notebook of Xiaodong Qi's" />
 <meta property="dc:subject" content="Physics" />
 <meta property="dc:type" content="website" />
 <meta name="dc.language" content="en, zh-Hans, cmn">
 <!-- RDFa Metadata (in OpenGraph) -->
 <meta property="og:title" content="Xiaodong Qi's NoteBlog" />
-<meta property="og:author" content="https://www.qixiaodong.tk/index.html" />  <!-- Should be Liquid? URI? -->
+<meta property="og:author" content="https://purl.org/qxd/index.html" />  <!-- Should be Liquid? URI? -->
 <meta property="https://ogp.me/ns/profile#first_name" content="Xiaodong"/>
 <meta property="https://ogp.me/ns/profile#last_name" content="Qi"/>
 <meta property="https://ogp.me/ns/article#published_time" content="" />
-<meta property="og:site_name" content="The NoteBlog of Xiaodong Qi" /> <!-- Same as dc:source? -->
-<meta property="og:url" content="https://www.qixiaodong.tk/" />
+<meta property="og:site_name" content="A Notebook of Xiaodong Qi's" /> <!-- Same as dc:source? -->
+<meta property="og:url" content="https://purl.org/qxd/" />
 <meta property="og:type" content="website" />
 <!-- Google Scholar Metadata -->
 <meta name="citation_author" content="Xiaodong Qi"/>
 <meta name="citation_date" content=""/>
 <meta name="citation_title" content="Xiaodong Qi's NoteBlog"/>
-<meta name="citation_journal_title" content="The NoteBlog of Xiaodong Qi"/>
+<meta name="citation_journal_title" content="A Notebook of Xiaodong Qi's"/>
 <!--NOTE: see also the COinS Metadata in span element in coins.html and footer. -->
 <!-- Twitter card summary -->
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@i2000s" />
 <meta name="twitter:title" content="Xiaodong Qi's NoteBlog" />
 <meta name="twitter:description" content="Xiaodong Qi's NoteBlogs and CV. Mostly relates to his research done at the Center for Quantum Information and Control (CQuIC), University of New Mexico." />
-<meta name="twitter:image" content="https://www.qixiaodong.tk/assets/img/qi2016.jpg" />
+<meta name="twitter:image" content="https://purl.org/qxd/assets/img/qi2016.jpg" />
 <!-- Baidu website verification code -->
 <meta name="baidu-site-verification" content="cAv3dLIDps" />
 
@@ -101,7 +100,7 @@ var _hmt = _hmt || [];
 
 
     <!-- Help the browser identify the RSS feed automatically -->
-    <link rel="alternate" type="application/rss+xml" title="The NoteBlog of Xiaodong Qi" href="/atom.xml" />
+    <link rel="alternate" type="application/rss+xml" title="A Notebook of Xiaodong Qi's" href="/atom.xml" />
 
     <!-- favicon -->
     <link rel="apple-touch-icon" sizes="57x57" href="https://www.qixiaodong.tk/assets/img/favicon/apple-icon-57x57.png">
@@ -231,16 +230,16 @@ var _hmt = _hmt || [];
        </div>
         <br>
        <div class="col-md-12 col-sm-12" style="margin-left:-5px">
-           <a href="mailto:i2000s@hotmail.com" onClick="recordOutboundLink(this, 'Outbound Links', 'email'); return false;"><img src="/assets/img/icon-email.png" height="48px" alt="email"> </a>
-           <a href="https://github.com/i2000s" onClick="recordOutboundLink(this, 'Outbound Links', 'Github'); return false;"><img src="/assets/img/icon-github.png" height="40px" alt="github"> </a>
-           <a href="https://plus.google.com/+XiaodongQi"><img src="/assets/img/icon-gplus.png" height="40px" alt="G+"></a>
-           <a href="https://www.facebook.com/i2000s"><img src="/assets/img/icon-facebook.png" height="42px" alt="facebook"></a>
-           <a href="https://scholar.google.com/citations?user=6FdqHlIAAAAJ&hl=en"><img src="/assets/img/icon-scholar.png" height="40px" alt="GoogleScholar"></a>
-           <a href="https://twitter.com/i2000s"><img src="/assets/img/icon-twitter.png" height="45px" alt="Twitter"></a>
-           <a href="https://www.linkedin.com/in/xiaodongqi"><img src="/assets/img/icon-linkedin.png" height="40px" alt="LinkedIn"></a>
-           <a href="/atom.xml" onClick="recordOutboundLink(this, 'Outbound Links', 'RSS'); return false;"><img src="/assets/img/icon-rss.png" height="40px" alt="feed"></a>
-           <!--<a href="https://physics.stackexchange.com/users/37682/xiaodong-qi"><img src="/assets/img/icon-stackoverflow.png" height="40px" alt="Physics Stackexchange"></a>-->
-      </div>
+           <a href="mailto:i2000s@hotmail.com" onClick="recordOutboundLink(this, 'Outbound Links', 'email'); return false;"><img src="https://www.qixiaodong.tk/assets/img/icon-email.png" height="48px" alt="email"> </a>
+<a href="https://github.com/i2000s" onClick="recordOutboundLink(this, 'Outbound Links', 'Github'); return false;"><img src="https://www.qixiaodong.tk/assets/img/icon-github.png" height="40px" alt="github"> </a>
+<a href="https://plus.google.com/+XiaodongQi"><img src="https://www.qixiaodong.tk/assets/img/icon-gplus.png" height="40px" alt="G+"></a>
+<a href="https://www.facebook.com/i2000s"><img src="https://www.qixiaodong.tk/assets/img/icon-facebook.png" height="42px" alt="facebook"></a>
+<a href="https://scholar.google.com/citations?user=6FdqHlIAAAAJ&hl=en"><img src="https://www.qixiaodong.tk/assets/img/icon-scholar.png" height="40px" alt="GoogleScholar"></a>
+<a href="https://twitter.com/i2000s"><img src="https://www.qixiaodong.tk/assets/img/icon-twitter.png" height="45px" alt="Twitter"></a>
+<a href="https://www.linkedin.com/in/xiaodongqi"><img src="https://www.qixiaodong.tk/assets/img/icon-linkedin.png" height="40px" alt="LinkedIn"></a>
+<a href="/atom.xml" onClick="recordOutboundLink(this, 'Outbound Links', 'RSS'); return false;"><img src="https://www.qixiaodong.tk/assets/img/icon-rss.png" height="40px" alt="feed"></a>
+
+       </div>
      <!-- <br><br><br> -->
     </div>
     <!-- Add the extra clearfix for only the required viewport -->
@@ -288,6 +287,21 @@ var _hmt = _hmt || [];
   <a rel="license" href="https://creativecommons.org/licenses/by/4.0/">
         <span align="center" margin-top="-10px">Copyright &copy; 2016 Xiaodong Qi under the Creative Commons Attribution License or otherwise specified. </span></a>
   <iframe class="github-btn" src="//ghbtns.com/github-btn.html?user=i2000s&repo=i2000s.github.io&type=star&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="90px" height="40px" style="vertical-align:middle; margin-top:17px;"></iframe>
+  
+<!-- COinS metadata (for citation managers like Zotero etc), goes in body text -->
+  <span
+      class="Z3988"
+      title="ctx_ver=Z39.88-2004
+      &amp;rft_val_fmt=info%3Aofi%2Ffmt%3Akev%3Amtx%3Adc
+      &amp;rfr_id=info%3Asid%2Focoins.info%3Agenerator
+      &amp;rft.title=Xiaodong Qi's NoteBlog
+      &amp;rft.creator=Xiaodong Qi
+      &amp;rft.date=
+      &amp;rft.language='en-US, zh-Hans'
+      &amp;rft.rights='CC-BY'
+      &amp;rft_id=https://purl.org/qxd/">
+  </span>
+
   <!-- </div> -->
   <br>
 </div>
