--- a/notebooks.html
+++ b/notebooks.html
@@ -39,33 +39,33 @@ layout: default
 <meta property="dc:date" content="" />
 <meta property="dc:format" content="text/html" />
 <meta property="dc:language" content="en" />
-<meta property="dc:identifier" content="https://www.qixiaodong.tk/notebooks" />
+<meta property="dc:identifier" content="https://purl.org/qxd/notebooks" />
 <meta property="dc:rights" content="CC-BY" />
-<meta property="dc:source" content="The NoteBlog of Xiaodong Qi" />
+<meta property="dc:source" content="A Notebook of Xiaodong Qi's" />
 <meta property="dc:subject" content="Physics" />
 <meta property="dc:type" content="website" />
 <meta name="dc.language" content="en, zh-Hans, cmn">
 <!-- RDFa Metadata (in OpenGraph) -->
 <meta property="og:title" content="Jupyter Notebooks" />
-<meta property="og:author" content="https://www.qixiaodong.tk/index.html" />  <!-- Should be Liquid? URI? -->
+<meta property="og:author" content="https://purl.org/qxd/index.html" />  <!-- Should be Liquid? URI? -->
 <meta property="https://ogp.me/ns/profile#first_name" content="Xiaodong"/>
 <meta property="https://ogp.me/ns/profile#last_name" content="Qi"/>
 <meta property="https://ogp.me/ns/article#published_time" content="" />
-<meta property="og:site_name" content="The NoteBlog of Xiaodong Qi" /> <!-- Same as dc:source? -->
-<meta property="og:url" content="https://www.qixiaodong.tk/notebooks" />
+<meta property="og:site_name" content="A Notebook of Xiaodong Qi's" /> <!-- Same as dc:source? -->
+<meta property="og:url" content="https://purl.org/qxd/notebooks" />
 <meta property="og:type" content="website" />
 <!-- Google Scholar Metadata -->
 <meta name="citation_author" content="Xiaodong Qi"/>
 <meta name="citation_date" content=""/>
 <meta name="citation_title" content="Jupyter Notebooks"/>
-<meta name="citation_journal_title" content="The NoteBlog of Xiaodong Qi"/>
+<meta name="citation_journal_title" content="A Notebook of Xiaodong Qi's"/>
 <!--NOTE: see also the COinS Metadata in span element in coins.html and footer. -->
 <!-- Twitter card summary -->
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@i2000s" />
 <meta name="twitter:title" content="Jupyter Notebooks" />
 <meta name="twitter:description" content="" />
-<meta name="twitter:image" content="https://www.qixiaodong.tk/assets/img/qi2016.jpg" />
+<meta name="twitter:image" content="https://purl.org/qxd/assets/img/qi2016.jpg" />
 <!-- Baidu website verification code -->
 <meta name="baidu-site-verification" content="cAv3dLIDps" />
 
@@ -255,15 +255,16 @@ from Github.  The links take you directly to nbviewer.
             <div class="col-md-7 col-xs-9">
               <div class="row">
                <a href="mailto:i2000s@hotmail.com" onClick="recordOutboundLink(this, 'Outbound Links', 'email'); return false;"><img src="https://www.qixiaodong.tk/assets/img/icon-email.png" height="48px" alt="email"> </a>
-               <a href="https://github.com/i2000s" onClick="recordOutboundLink(this, 'Outbound Links', 'Github'); return false;"><img src="https://www.qixiaodong.tk/assets/img/icon-github.png" height="40px" alt="github"> </a>
-               <a href="https://plus.google.com/+XiaodongQi"><img src="https://www.qixiaodong.tk/assets/img/icon-gplus.png" height="40px" alt="G+"></a>
-               <a href="https://www.facebook.com/i2000s"><img src="https://www.qixiaodong.tk/assets/img/icon-facebook.png" height="42px" alt="facebook"></a>
-               <a href="https://scholar.google.com/citations?user=6FdqHlIAAAAJ&hl=en"><img src="https://www.qixiaodong.tk/assets/img/icon-scholar.png" height="40px" alt="GoogleScholar"></a>
-               <a href="https://twitter.com/i2000s"><img src="https://www.qixiaodong.tk/assets/img/icon-twitter.png" height="45px" alt="Twitter"></a>
-               <a href="https://www.linkedin.com/in/xiaodongqi"><img src="https://www.qixiaodong.tk/assets/img/icon-linkedin.png" height="40px" alt="LinkedIn"></a>
-               <a href="/atom.xml" onClick="recordOutboundLink(this, 'Outbound Links', 'RSS'); return false;"><img src="https://www.qixiaodong.tk/assets/img/icon-rss.png" height="40px" alt="feed"></a>
-               <a href="https://physics.stackexchange.com/users/37682/xiaodong-qi"><img src="https://www.qixiaodong.tk/assets/img/icon-stackoverflow.png" height="40px" alt="Physics Stackexchange"></a>
-               <iframe class="github-btn" src="//ghbtns.com/github-btn.html?user=i2000s&repo=i2000s.github.io&type=star&count=true&size=large" allowtransparency="true" frameborder="0" scrolling="0" width="150px" height="40px" style="vertical-align:middle; margin-top:9px;"></iframe>
+<a href="https://github.com/i2000s" onClick="recordOutboundLink(this, 'Outbound Links', 'Github'); return false;"><img src="https://www.qixiaodong.tk/assets/img/icon-github.png" height="40px" alt="github"> </a>
+<a href="https://plus.google.com/+XiaodongQi"><img src="https://www.qixiaodong.tk/assets/img/icon-gplus.png" height="40px" alt="G+"></a>
+<a href="https://www.facebook.com/i2000s"><img src="https://www.qixiaodong.tk/assets/img/icon-facebook.png" height="42px" alt="facebook"></a>
+<a href="https://scholar.google.com/citations?user=6FdqHlIAAAAJ&hl=en"><img src="https://www.qixiaodong.tk/assets/img/icon-scholar.png" height="40px" alt="GoogleScholar"></a>
+<a href="https://twitter.com/i2000s"><img src="https://www.qixiaodong.tk/assets/img/icon-twitter.png" height="45px" alt="Twitter"></a>
+<a href="https://www.linkedin.com/in/xiaodongqi"><img src="https://www.qixiaodong.tk/assets/img/icon-linkedin.png" height="40px" alt="LinkedIn"></a>
+<a href="/atom.xml" onClick="recordOutboundLink(this, 'Outbound Links', 'RSS'); return false;"><img src="https://www.qixiaodong.tk/assets/img/icon-rss.png" height="40px" alt="feed"></a>
+<a href="https://physics.stackexchange.com/users/37682/xiaodong-qi"><img src="https://www.qixiaodong.tk/assets/img/icon-stackoverflow.png" height="40px" alt="Physics Stackexchange"></a>
+<iframe class="github-btn" src="//ghbtns.com/github-btn.html?user=i2000s&repo=i2000s.github.io&type=star&count=true&size=large" allowtransparency="true" frameborder="0" scrolling="0" width="150px" height="40px" style="vertical-align:middle; margin-top:9px;"></iframe>
+
               </div>
               <div class="row">
                 <span> &nbsp; </span> <span><a href="https://www.qixiaodong.tk/CV-XiaodongQi.pdf"
@@ -301,7 +302,7 @@ from Github.  The links take you directly to nbviewer.
       &amp;rft.date=
       &amp;rft.language='en-US, zh-Hans'
       &amp;rft.rights='CC-BY'
-      &amp;rft_id=https://www.qixiaodong.tk/notebooks">
+      &amp;rft_id=https://purl.org/qxd/notebooks">
   </span>
 
     </footer>
