--- a/index.html
+++ b/index.html
@@ -161,14 +161,18 @@ var _hmt = _hmt || [];
             <li class=""><a href="/cn/">中文</a></li>
          
         </ul>
-      <!-- Search site using Google's index -->
-        <form class="navbar-form navbar-right" role="search" method="get" action="https://google.com/search">
-          <div class="form-group">
-            <input type="hidden" name="q" value="site:https://www.qixiaodong.tk" />
-            <input type="text" class="form-control search-query" name="q" placeholder="Search this site"/>
-          </div>
-          <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-       </form>
+        <!-- Search site using DuckDuckGo's index -->
+          <form class="navbar-form navbar-right" role="search" method="get" action="//duckduckgo.com/">
+            <div class="form-group">
+              <input type="hidden" name="sites" value="https://www.qixiaodong.tk" />
+              <input type="hidden" value="1" name="kh"></input> <!-- To turn on https -->
+              <input type="hidden" value="1" name="kn"></input> <!-- To open up a new window -->
+              <input type="hidden" value="1" name="kac"></input> <!-- To turn on auto-suggestion -->
+              <input type="hidden" value="e" name="ky"></input> <!-- Color of highlights. or write out the color code you want, e.g. %23395323 (%23 is an encoded # char). -->
+              <input type="text" class="form-control search-query" type="search" name="q" placeholder="Search this site"/>
+            </div>
+            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+         </form>
 
     </div><!--/.nav-collapse -->
   </div> <!-- /container -->
@@ -195,7 +199,8 @@ var _hmt = _hmt || [];
       <a class="btn btn-primary btn-lg btn-block" style="font-weight:bold;" href="/en/" role="button">English Site</a>
   </div>
   <br />
-  <br />
+  <p>The CV of Xiaodong Qi and one of his scholar notebook in doing academic research.
+    Everything is citable using the permanent URL at <a href="//purl.org/qxd/">https://purl.org/qxd/</a>.</p>
   <br />
   <div class="col-md-10 col-sm-11 col-md-offset-1" style="text-align:center; align:center;">
     <div style="font-weight:bold; text-align:center;font-size:1.2em;">
@@ -256,7 +261,8 @@ var _hmt = _hmt || [];
         <a class="btn btn-success btn-lg btn-block" style="font-weight:bold;" href="/cn/" role="button">中文站点</a>
       </div>
       <br />
-      <br />
+      <p>戚晓东的履历和学术笔记。如需引用请使用永久链接地址<a href="//purl.org/qxd/">https://purl.org/qxd/</a>.
+        中文网站正在更新中。详见<a href="https://github.com/i2000s/cn/projects/1">这里</a>。</p>
       <br />
       <div class="col-md-10 col-sm-11">
         <div style="font-weight:bold; text-align:center;font-size:1.2em;">
