--- a/tags.html
+++ b/tags.html
@@ -161,14 +161,18 @@ var _hmt = _hmt || [];
             <li class=""><a href="/cn/">中文</a></li>
          
         </ul>
-      <!-- Search site using Google's index -->
-        <form class="navbar-form navbar-right" role="search" method="get" action="https://google.com/search">
-          <div class="form-group">
-            <input type="hidden" name="q" value="site:https://www.qixiaodong.tk" />
-            <input type="text" class="form-control search-query" name="q" placeholder="Search this site"/>
-          </div>
-          <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-       </form>
+        <!-- Search site using DuckDuckGo's index -->
+          <form class="navbar-form navbar-right" role="search" method="get" action="//duckduckgo.com/">
+            <div class="form-group">
+              <input type="hidden" name="sites" value="https://www.qixiaodong.tk" />
+              <input type="hidden" value="1" name="kh"></input> <!-- To turn on https -->
+              <input type="hidden" value="1" name="kn"></input> <!-- To open up a new window -->
+              <input type="hidden" value="1" name="kac"></input> <!-- To turn on auto-suggestion -->
+              <input type="hidden" value="e" name="ky"></input> <!-- Color of highlights. or write out the color code you want, e.g. %23395323 (%23 is an encoded # char). -->
+              <input type="text" class="form-control search-query" type="search" name="q" placeholder="Search this site"/>
+            </div>
+            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+         </form>
 
     </div><!--/.nav-collapse -->
   </div> <!-- /container -->
@@ -442,15 +446,15 @@ var _hmt = _hmt || [];
           <div class='cloud'>
             <h1> Tag Cloud</h1>
             <a style='font-size: NaN%' href='/tags.html#matlab'>matlab</a>
-<a style='font-size: NaN%' href='/tags.html#poster'>poster</a>
-<a style='font-size: NaN%' href='/tags.html#GPU'>GPU</a>
-<a style='font-size: NaN%' href='/tags.html#conference'>conference</a>
-<a style='font-size: NaN%' href='/tags.html#summer study'>summer study</a>
-<a style='font-size: NaN%' href='/tags.html#nanofiber'>nanofiber</a>
-<a style='font-size: NaN%' href='/tags.html#Julia'>Julia</a>
-<a style='font-size: NaN%' href='/tags.html#presentation'>presentation</a>
-<a style='font-size: NaN%' href='/tags.html#quantum dynamics'>quantum dynamics</a>
 <a style='font-size: NaN%' href='/tags.html#quantum optics'>quantum optics</a>
+<a style='font-size: NaN%' href='/tags.html#summer study'>summer study</a>
+<a style='font-size: NaN%' href='/tags.html#presentation'>presentation</a>
+<a style='font-size: NaN%' href='/tags.html#Julia'>Julia</a>
+<a style='font-size: NaN%' href='/tags.html#poster'>poster</a>
+<a style='font-size: NaN%' href='/tags.html#quantum dynamics'>quantum dynamics</a>
+<a style='font-size: NaN%' href='/tags.html#nanofiber'>nanofiber</a>
+<a style='font-size: NaN%' href='/tags.html#conference'>conference</a>
+<a style='font-size: NaN%' href='/tags.html#GPU'>GPU</a>
 
           </div>
 
